ツールウィンドウのバージョン情報をpackage.jsonから取得するよｳﾆ

--- a/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
+++ b/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
@@ -90,7 +90,7 @@
             <ui:VisualElement style="flex-direction: row; justify-content: flex-end; margin-top: 5px; margin-bottom: 0;">
                 <ui:Label text="An-Labo NailTool" />
                 <ui:Label text="Ver" style="font-size: 10px;" />
-                <ui:Label text="0.8.0.0-rc.0" style="font-size: 10px;" />
+                <ui:Label name="version" style="font-size: 10px;" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
