ソートドロップダウン追加

--- a/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
+++ b/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
@@ -7,6 +7,7 @@
             <world.anlabo.mdnailtool.Editor.VisualElements.LanguageDropDown focusable="true" />
             <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedObjectField name="avatar-object" text-id="window.avatar" type="VRC.SDK3.Avatars.Components.VRCAvatarDescriptor, VRCSDK3A"/>
             <world.anlabo.mdnailtool.Editor.VisualElements.AvatarDropDowns name="avatar"/>
+            <world.anlabo.mdnailtool.Editor.VisualElements.AvatarSearchField name="avatar-search"/>
         </ui:VisualElement>
         <ui:VisualElement name="Body">
             <ui:Box style="margin: 5px; padding: 5px;">
