--- a/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
+++ b/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
@@ -3,6 +3,7 @@
         <ui:VisualElement name="Header">
             <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedFoldout text-id="window.treatment" value="false">
                 <ui:Label name="link-manual" text="Manual" style="color: #7070FF;" />
+                <ui:Label name="link-contact" text="FAQ" style="color: #7070FF;" />
             </world.anlabo.mdnailtool.Editor.VisualElements.LocalizedFoldout>
             <world.anlabo.mdnailtool.Editor.VisualElements.LanguageDropDown focusable="true" />
             <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedObjectField name="avatar-object" text-id="window.avatar" type="VRC.SDK3.Avatars.Components.VRCAvatarDescriptor, VRCSDK3A"/>
