--- a/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
+++ b/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
@@ -22,43 +22,77 @@
                     <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedDropDown name="nail-color" text-id="window.nail_color" style="width: 30%;" />
                 </ui:VisualElement>
             </ui:Box>
-            <ui:VisualElement style="flex-direction: row; height: 18px; margin-top: 5px">
-                <ui:Toggle name="set-per-finger" />
-                <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.set_per_finger" />
-            </ui:VisualElement>
-            <ui:Box name="hand-selects" style="margin: 0px 5px; padding: 5px;">
-                <ui:VisualElement style="flex-direction: row;">
-                    <ui:VisualElement style="flex-direction: row; flex-grow: 0; flex-shrink: 0; width: 40%;">
-                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.left_hand" style="min-width: 122px;" />
-                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.nail_design" />
+
+            <ui:VisualElement style="margin-top: 5px; margin-bottom: 5px;">
+                
+                <ui:VisualElement style="flex-direction: row; height: 24px; align-items: center; margin-bottom: 2px;">
+                    
+                    <ui:VisualElement style="flex-direction: row; align-items: center;">
+                        <ui:Toggle name="toggle-hand-active" value="true" style="margin-right: 0px;"/>
+                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel name="label-hand-active" text-id="window.hand_nail" style="margin-left: 2px;" />
                     </ui:VisualElement>
-                    <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.nail_material" style="width: 28%; padding-left: 4px;" />
-                    <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.nail_color" style="width: 28%; padding-left: 4px;" />
-                </ui:VisualElement>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-thumb"  text-id="window.thumb"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-index"  text-id="window.index_finger"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-middle" text-id="window.middle_finger"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-ring"   text-id="window.ring_finger"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-little" text-id="window.little_finger"/>
-                <ui:VisualElement style="flex-direction: row;">
-                    <ui:VisualElement style="flex-direction: row; flex-grow: 0; flex-shrink: 0; width: 60%;">
-                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.right_hand" style="min-width: 150px;" />
+
+                    <ui:VisualElement style="width: 20px;" />
+
+                    <ui:VisualElement style="flex-direction: row; align-items: center;">
+                        <ui:Toggle name="toggle-hand-detail" style="margin-right: 0px;"/>
+                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel name="label-hand-detail" text-id="window.set_per_finger" style="margin-left: 2px;" />
                     </ui:VisualElement>
+
                 </ui:VisualElement>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-thumb"  text-id="window.thumb"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-index"  text-id="window.index_finger"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-middle" text-id="window.middle_finger"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-ring"   text-id="window.ring_finger"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-little" text-id="window.little_finger"/>
-            </ui:Box>
-            <ui:VisualElement style="flex-direction: row; height: 18px; margin-top: 5px">
-                <ui:Toggle name="use-foot-nail"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel name="use-foot-nail" text-id="window.foot_nail" />
+
+                <ui:Box name="hand-selects" style="margin: 0px 5px; padding: 5px;">
+                    <ui:VisualElement style="flex-direction: row;">
+                        <ui:VisualElement style="flex-direction: row; flex-grow: 0; flex-shrink: 0; width: 40%;">
+                            <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.left_hand" style="min-width: 122px;" />
+                            <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.nail_design" />
+                        </ui:VisualElement>
+                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.nail_material" style="width: 28%; padding-left: 4px;" />
+                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.nail_color" style="width: 28%; padding-left: 4px;" />
+                    </ui:VisualElement>
+                    
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-thumb"  text-id="window.thumb"/>
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-index"  text-id="window.index_finger"/>
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-middle" text-id="window.middle_finger"/>
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-ring"   text-id="window.ring_finger"/>
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-little" text-id="window.little_finger"/>
+                    
+                    <ui:VisualElement style="flex-direction: row;">
+                        <ui:VisualElement style="flex-direction: row; flex-grow: 0; flex-shrink: 0; width: 60%;">
+                            <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel text-id="window.right_hand" style="min-width: 150px;" />
+                        </ui:VisualElement>
+                    </ui:VisualElement>
+                    
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-thumb"  text-id="window.thumb"/>
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-index"  text-id="window.index_finger"/>
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-middle" text-id="window.middle_finger"/>
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-ring"   text-id="window.ring_finger"/>
+                    <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-little" text-id="window.little_finger"/>
+                </ui:Box>
             </ui:VisualElement>
-            <ui:Box name="foot-selects" style="margin: 0px 5px; padding: 5px;">
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="left-foot" text-id="window.left_foot"/>
-                <world.anlabo.mdnailtool.Editor.VisualElements.NailDesignDropDowns name="right-foot" text-id="window.right_foot"/>
-            </ui:Box>
+
+            <ui:VisualElement style="margin-top: 5px; margin-bottom: 5px;">
+                
+                <ui:VisualElement style="flex-direction: row; height: 24px; align-items: center; margin-bottom: 2px;">
+                    
+                    <ui:VisualElement style="flex-direction: row; align-items: center;">
+                        <ui:Toggle name="toggle-foot-active" style="margin-right: 0px;"/>
+                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel name="label-foot-active" text-id="window.foot_nail" style="margin-left: 2px;" />
+                    </ui:VisualElement>
+
+                    <ui:VisualElement style="width: 20px;" />
+
+                    <ui:VisualElement style="flex-direction: row; align-items: center;">
+                        <ui:Toggle name="toggle-foot-detail" style="margin-right: 0px;"/>
+                        <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedLabel name="label-foot-detail" text-id="window.set_per_finger" style="margin-left: 2px;" />
+                    </ui:VisualElement>
+
+                </ui:VisualElement>
+
+                <ui:Box name="foot-selects" style="margin: 0px 5px; padding: 5px;">
+                </ui:Box>
+            </ui:VisualElement>
+
             <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedFoldout text-id="window.advanced_setting">
                 <ui:Box style="margin: 0px 5px 0px -10px; padding: 5px;">
                     <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedObjectField name="material-object" text-id="window.direct_material" type="UnityEngine.Material, UnityEngine.CoreModule"/>
