--- a/Packages/world.anlabo.mdnailtool/Editor/Window/MDNailToolWindow.uss
+++ b/Packages/world.anlabo.mdnailtool/Editor/Window/MDNailToolWindow.uss
@@ -539,7 +539,7 @@
     flex-direction: row;
     align-items: center;
     margin-bottom: 8px;
-    height: 28px;
+    min-height: 28px;
 }
 
 .mdn-search-field {
