--- a/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
+++ b/Packages/world.anlabo.mdnailtool/Editor/Window/MDnailToolWindow.uxml
@@ -83,7 +83,7 @@
                             tooltip-id="tooltip.nail_material"
                             class="mdn-style-dropdown" />
                     </ui:VisualElement>
-                    <ui:VisualElement class="mdn-style-item">
+                    <ui:VisualElement class="mdn-style-item mdn-style-item-last">
                         <world.anlabo.mdnailtool.Editor.VisualElements.LocalizedDropDown
                             name="nail-color"
                             text-id="window.nail_color"
